# devops-plat

./: .gitignore  README.md
apps/: deployment-gitlab.yaml  deployment-jenkins.yaml  docker-compose-gitlab.yaml  docker-compose-sonarqube.yaml
apps/gitlab/: docker-compose.yaml
apps/jenkins/: Jenkinsfile  deployment-jenkins.yaml  docker-compose.yaml
apps/jenkins/deploy/: Jenkinsfile
apps/jenkins/images/: dockerfile.cmake  dockerfile.gtest  dockerfile.maven  maven_settings.xml
apps/jenkins/test/jmeter/: Jenkinsfile
apps/sonarqube/: deployment-sonar.yaml  docker-compose.yaml
cluster/: Vagrantfile
cluster/provisioning/: ingress.yaml  kubernetes-dashboard.yaml  registry.yaml  setup-cluster.sh  setup-hostnames.sh  setup-master.sh  setup-minion.sh  vm_config.yml
demo/cpp/: CMakeLists.txt  Dockerfile  Jenkinsfile  deployment.yaml  main.cpp
demo/cpp/inc/: MinMax.h
demo/cpp/test/: TestAdd.cpp
demo/cpp/test/jmeter/: helloworld.jmx
demo/java/: Dockerfile  Jenkinsfile  deployment.yaml  pom.xml
demo/java/src/main/java/com/example/demo/controller/: HelloController.java
demo/java/test/: helloworld.jmx
demo/java/test/jmeter/: helloworld.jmx
demo/java/test/robotframwork/atest/: helloworld.robot
